adding new speakers

--- a/index.html
+++ b/index.html
@@ -37,9 +37,6 @@
                     $('body').removeClass('clicked');
 				});
 
-
-
-
 				$('.joan-yee').click(function(){
 			        $('.pop-up-2').show();
 			        $('.wrapper').css('opacity', '0.2');
@@ -50,9 +47,6 @@
 				  $('.wrapper').css('opacity', '1.0');
                     $('body').removeClass('clicked');
 				});
-
-
-
 
 				$('.taskin-haque').click(function(){
 			        $('.pop-up-3').show();
@@ -81,7 +75,7 @@
 
 
 
-				$('.skip-flanagan').click(function(){
+				$('.kobchart-kb').click(function(){
 			        $('.pop-up-5').show();
 			        $('.wrapper').css('opacity', '0.2');
                     $('body').addClass('clicked');
@@ -161,8 +155,8 @@
 			<span>x</span>
 			<div class="pop-up-text">
 				<div class="flex-container">
-					<h1>Joan Yee</h1>
-					<img class="img-2" src="images/speakers/JoanYee.png" alt="image two" />
+					<h1>Chris Arscott</h1>
+					<img class="img-2" src="images/speakers/ChrisArscott.png" alt="image two" />
 				</div>
 			</div>
 		</div>
@@ -187,6 +181,16 @@
 				</div>
 			</div>
 		</div>
+
+		<div class="pop-up-5">
+			<span>x</span>
+			<div class="pop-up-text">
+				<div class="flex-container">
+					<h1>Kobchart Jaraswimol</h1>
+                    <img class="img-5" src="images/speakers/Kobchart.png" alt="image five" />
+				</div>
+			</div>
+		</div>		
 
 		<!--The first section of the Home page. Houses the main site navigation.-->
 		<div class="wrapper">
@@ -235,6 +239,7 @@
 	                    <div class="speaker joan-yee"></div>
 	                    <div class="speaker taskin-haque"></div>
 	                    <div class="speaker anas-brt"></div>
+	                    <div class="speaker kobchart-kb"></div>
 	                </div>
 				</div>
 			</div>
@@ -282,16 +287,16 @@
 			<div class="footer" id="sectionCont">
 				<div class="top">
 					<div class="footer-title">Questions? Contact Us</div>
-					<a href="mailto:tedxeis1@gmail.com" class="footer-button">EMAIL</a>
+					<a href="mailto:tedxeis1@gmail.com" target="_blank" class="footer-button">EMAIL</a>
 				</div>
 
 				<div class="bottom">
 					<div class="container">
 						<div class="footer-left">This independent TEDx event is operated under license from TED.</div>
 						<div class="footer-right">
-							<a href="https://www.facebook.com/TEDxRIT/?hc_ref=SEARCH&fref=nf" target="_blank" class="social fb"></a>
-							<a href="https://www.instagram.com/tedxrit/" target="_blank" class="social insta"></a>
-							<a href="https://twitter.com/TEDXRIT" target="_blank" class="social twitter"></a>
+							<a href="https://www.facebook.com/tedxeis/" target="_blank" class="social fb"></a>
+							<a href="https://www.instagram.com/tedxeis/" target="_blank" class="social insta"></a>
+							<a href="https://twitter.com/EisTedx" target="_blank" class="social twitter"></a>
 						</div>
 					</div>
 				</div>
