--- a/speakers.html
+++ b/speakers.html
@@ -129,8 +129,8 @@
 			<span>x</span>
 			<div class="pop-up-text">
 				<div class="flex-container">
-					<h1>Joan Yee</h1>
-					<img class="img-2" src="images/speakers/JoanYee.png" alt="image two" />
+					<h1>Chris Arscott</h1>
+					<img class="img-2" src="images/speakers/ChrisArscott.png" alt="image two" />
 					<p>.</p>
 				</div>
 			</div>
@@ -158,6 +158,17 @@
 				</div>
 			</div>
 		</div>	
+
+		<div class="pop-up-5">
+			<span>x</span>
+			<div class="pop-up-text">
+				<div class="flex-container">
+					<h1>Kobchart Jaraswimol</h1>
+					<img class="img-5" src="images/speakers/Kobchart.png" alt="image five" />
+					<p></p>
+				</div>
+			</div>
+		</div>			
 
 		<!--The first section of the Speakers page. Houses the main image and page title as well as the main site navigation.-->
         <div class="wrapper">
@@ -199,10 +210,8 @@
 					</div>
 					<div class="right">
 						<div class="content-container">
-							<div class="title">Joan Yee</div>
-							<div class="text">Joan Yee is the Education Sector Advisor for Titan with a track record of managing and investing in education companies.
-
-							In addition to driving large, established education companies across Asia, Ms. Yee is also a serial entrepreneur.  She has founded companies not only in the education space, but also in the F&B and events management sectors.</div>
+							<div class="title">Chris Arscott</div>
+							<div class="text">Chris Arscott was raised in the US and first moved to the Asia Pacific region in 1997 where he worked as a fluid mechanics engineer in Australia and Papua New Guinea. He traveled between Asia, the US, and Europe for several years before coming to reside in South East Asia in 2004. He holds a Bachelors of Science in Mechanical Engineering from Stanford University and an MBA from INSEAD with supplemental studies at Harvard Business School, Dartmouth, UCLA, and USC.</div>
 						</div>
 					</div>
 				</div>
@@ -231,6 +240,19 @@
 					</div>
 				</div>
 
+				<div class="row">
+					<div class="left">
+						<div class="content-container">
+							<div class="title">Kobchart Jaraswimol</div>
+							<div class="text">Kobchart Jaraswimol, 23 years old Bangkokian, loves to travel and expanding networks. He values honesty, integrety and responsibility. He is experienced at working in multicultural backgrounds through volunteery contributions in the United Nations and through being a full-time consultant at Ernst & Young Global.</div>
+						</div>
+					</div>
+					<div class="right">
+						<div class="img five"></div>
+					</div>
+				</div>
+
+
 
 			</div>
 		</div>
@@ -239,16 +261,16 @@
 		<div class="footer" id="sectionCont">
 			<div class="top">
 				<div class="footer-title">Questions? Contact Us</div>
-				<a href="mailto:tedxeis1@gmail.com" class="footer-button">EMAIL</a>
+				<a href="mailto:tedxeis1@gmail.com" target="_blank" class="footer-button">EMAIL</a>
 			</div>
 
 			<div class="bottom">
 				<div class="container">
 					<div class="footer-left">This independent TEDx event is operated under license from TED.</div>
 					<div class="footer-right">
-						<a href="https://www.facebook.com/TEDxRIT/?hc_ref=SEARCH&fref=nf" target="_blank" class="social fb"></a>
-						<a href="https://www.instagram.com/tedxrit/" target="_blank" class="social insta"></a>
-						<a href="https://twitter.com/TEDXRIT" target="_blank" class="social twitter"></a>
+							<a href="https://www.facebook.com/tedxeis/" target="_blank" class="social fb"></a>
+							<a href="https://www.instagram.com/tedxeis/" target="_blank" class="social insta"></a>
+							<a href="https://twitter.com/EisTedx" target="_blank" class="social twitter"></a>
 					</div>
 				</div>
 			</div>
