--- a/about.html
+++ b/about.html
@@ -81,16 +81,16 @@ celebrating the diversity of our community by engaging students and faculty in g
 		<div class="footer" id="sectionCont">
 			<div class="top">
 				<div class="footer-title">Questions? Contact Us</div>
-				<a href="mailto:tedxeis1@gmail.com" class="footer-button" class="footer-button">EMAIL</a>
+				<a href="mailto:tedxeis1@gmail.com" class="footer-button" target="_blank" class="footer-button">EMAIL</a>
 			</div>
 
 			<div class="bottom">
 				<div class="container">
 					<div class="footer-left">This independent TEDx event is operated under license from TED.</div>
 					<div class="footer-right">
-						<a href="https://www.facebook.com/TEDxRIT/?hc_ref=SEARCH&fref=nf" target="_blank" class="social fb"></a>
-						<a href="https://www.instagram.com/tedxrit/" target="_blank" class="social insta"></a>
-						<a href="https://twitter.com/TEDXRIT" target="_blank" class="social twitter"></a>
+						<a href="https://www.facebook.com/tedxeis/" target="_blank" class="social fb"></a>
+						<a href="https://www.instagram.com/tedxeis/" target="_blank" class="social insta"></a>
+						<a href="https://twitter.com/EisTedx" target="_blank" class="social twitter"></a>
 					</div>
 				</div>
 			</div>
