--- a/signup.html
+++ b/signup.html
@@ -45,7 +45,7 @@
 		<!--The second section of the Committees page. Houses images and descriptions of each of the committees that make up TEDxRIT.-->
 		<div class="page-wrapper">
 
-			<h1 class="body-title">TEdxEkamaiIntlSchool Atendee Sign Up</h1>
+			<h1 class="body-title">TEDxEkamaiIntlSchool Atendee Sign Up</h1>
 <script type="text/javascript" src="https://form.jotform.com/jsform/90185314881156"></script>
 		</div>
 
