--- a/signup.html
+++ b/signup.html
@@ -46,7 +46,7 @@
 		<div class="page-wrapper">
 
 			<h1 class="body-title">TEDxEkamaiIntlSchool Atendee Sign Up</h1>
-<script type="text/javascript" src="https://form.jotform.me/90442517785463"></script>
+<script type="text/javascript" src="https://form.jotform.com/jsform/90442517785463"></script>
 		</div>
 
 		<!--The third and final section of the Committees page. Houses links to email the club as well as links to social media accounts.-->
